# ingeldop-solitaire

./: .gitignore  CMakeLists.txt  README.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: gamelayout.xml
android/app/src/main/res/menu/: menu.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/release/: app-release.aab
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: club_10.xml  club_2.xml  club_3.xml  club_4.xml  club_5.xml  club_6.xml  club_7.xml  club_8.xml  club_9.xml  club_a.xml  club_j.xml  club_k.xml  club_q.xml  dealbutton.xml  diamond_10.xml  diamond_2.xml  diamond_3.xml  diamond_4.xml  diamond_5.xml  diamond_6.xml  diamond_7.xml  diamond_8.xml  diamond_9.xml  diamond_a.xml  diamond_j.xml  diamond_k.xml  diamond_q.xml  heart_10.xml  heart_2.xml  heart_3.xml  heart_4.xml  heart_5.xml  heart_6.xml  heart_7.xml  heart_8.xml  heart_9.xml  heart_a.xml  heart_j.xml  heart_k.xml  heart_q.xml  (+14 more)
app/src/main/res/layout/: gamelayout.xml  statslayout.xml
app/src/main/res/menu/: menu.xml  statsmenu.xml
app/src/main/res/menu-v26/: menu.xml
app/src/main/res/mipmap-anydpi-v26/: ingeldop_round.xml
app/src/main/res/values/: arrays.xml  attrs.xml  dimens.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  Ingeldop.cpp  Ingeldop.hpp  Ingeldop.java
terminal/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
(+26 files in other folders)
